syntax = "proto3";
package pluginextensionv2;

option go_package = "./;pluginextensionv2";

message VersionedObject {
    string id = 1;
    string version = 2;
    string kind = 3;
    bytes data = 4;
    int64 timestamp = 5;
}

message StoreRequest {
    VersionedObject versionedObject = 1;
}

message StoreResponse {
    string error = 1;
}

message LatestRequest {
    string kind = 1;
}

message LatestResponse {
    string error = 1;
    map<string, VersionedObject> latestVersionedObjects = 2;
}

message HistoryRequest {
    string kind = 1;
    string id = 2;
}

message HistoryResponse {
    string error = 1;
    repeated VersionedObject versionedObjects = 2;
}

service VersionedStorage {
    rpc Store(StoreRequest) returns (StoreResponse);
    rpc Latest(LatestRequest) returns (LatestResponse);
    rpc History(HistoryRequest) returns (HistoryResponse);
}
  